css/main.css
/* ... */
.slide-link {
	text-decoration: none;
}

.slide-link:hover {
	color: black;
}

.slide-img {
    width: var(--slides-img-width);
	height: var(--slides-img-width);
    margin: 0 var(--slides-img-margin);
	object-fit: contain;
}

.slide-link h5 {
	margin-top: 10px;
	min-height: 70px;
}

p.descrp {
	text-align: left;
	margin-right: 2%;
	margin-bottom: 20px;
}

.search-form {
	margin-left: 0;
}

.results_container {
	width: 98%;
	display: flex;
	justify-content: center;
}

.results_list {
	position: absolute;
	width: 68vw;
	margin-left: 0;
	padding: 5px 0;
	margin-top: 10px;
	border-radius: 5px;
	background-color: #FFF;
	list-style-type: none;
	opacity: 0;
	box-shadow: 5px 5px 18px 6px rgba(2, 13, 27, 0.18);
}

.result-item {
	color: black;
	display: block;
	padding: 12px 20px;
	padding-left: 50px;
	text-align: left;
	list-style-type: none;
	text-decoration: none;
}

.result-item:hover {
	color: black;
	background-color: #e6e6e6;
	transition: background-color 0.2s ease;
}

.search_bar {
	padding: 1% 50px;
	width: 68vw;
	border-radius: 27px;
	border: none;
}
#clubs_title {
	font-size: 2.2rem;
	text-align: center;
	margin-top: 10%;
}

.search-wrapper {
	display: flex;
	flex-direction: column;
}

.search-bar-wrapper {
	position: relative;
	display: flex;
	width: 97%;
	margin-bottom: 5px;
}

.option-colour-circle {
	border-radius: 50%;
	width: 14rem;
	height: 14rem;
	border: 0.5rem solid rgb(224.5, 224.5, 224.5);
	margin-left: auto;
	margin-right: auto;
}

.option-colour-circle.background-blue {
	background-color: blue;
}
.option-colour-circle.background-red {
	background-color: red;
}
.option-colour-circle.background-white {
	background-color: white;
}

input#club_search {
	padding: 0 20px;
	height: 40px;
	width: 100%;
	border: 1px solid rgb(177, 177, 177);
	border-radius: 33px;
	background-color: #F8F8F8;
}
input#club_search:focus {
	outline: rgb(95, 95, 95) solid 1px;
	background-color: #FFF;
}
.quiz_slide {
  border: none;
  box-shadow: 5px 10px 18px #888888;
  width: 56%;
  padding: 2%;
  height: max-content;
}

.next {
	float: right;
}

.search-icon {
	color: black;
	position: relative;
	top: 11px;
	right: 35px;
}

.large-search-icon {
	font-size: 1.2em;
	top: 0;
	right: 40px;
}


.dropdown-btn {
	position: relative;
	height: 40px;
	width: 97%;
	border-radius: 33px;
	margin-bottom: 10px;
	padding: 0 20px;
	text-align: left;
	border: 1px solid rgb(177, 177, 177);
	background-color: #F8F8F8;
}

.dropdown-btn:focus {
	outline: rgb(95, 95, 95) solid 1px;
}

.filter-icon {
	position: absolute;
	top: 8px;
	right: 16px;
	pointer-events: none;
}

.dropdown_content {
	position: absolute;
	display: none;
	padding: 10px 0;
	width: 95%;
	background-color: white;
	border-radius: 5px;
	border: 1px solid rgb(184, 184, 184);
	box-shadow: 5px 5px 14px 8px rgba(221, 221, 221, 0.2);
	text-align: left;
}

.dropdown-active{
	display: flex;
	flex-direction: column;
}

.filter-wrapper {
	position: relative;
	width: 100%;
}

.filter-wrapper input {
	position: absolute;
	opacity: 0;
	height: 0;
	width: 0;
	cursor: pointer;
}

.filter-wrapper .checkmark {
	display: none;
	position: absolute;
	left: 15px;
	top: 15px;
	width: 15px;
	height: 15px;
	margin-right: 10px;
}

.filter-active .checkmark {
	display: block;
}

.filter-wrapper label {
	user-select: none;
	width: 100%;
	padding: 10px 50px;
}

.filter-wrapper label:hover {
	background-color: rgb(233, 233, 233);
	transition: background-color 0.2s ease-in-out;
}

li.error-message {
	list-style-type: none;
	margin-left: -23%;
	margin-top: 1%;
}

img.icons {
	width: 30px;
	margin-right: 5px;
	/* width: 100%; */
}

img.club_img {
	width: 90%;
	margin: 0 5%;
}
iframe#calendar {
    border: 0;
    width: 60%;
    height: 684px;
}

.calendar_table {
	margin: 0 2.5%;
	width: 95%;
	table-layout: fixed;
	border-collapse: collapse;
}

.calendar_col {
	border-left: 1px solid black;
	border-right: 1px solid black;
	vertical-align: top;
}

.calendar_col.full_width {
	width: 100%;
	border-left: 0px;
	border-right: 0px;
}

.calendar_header {
	border-bottom: 1px solid black;
}

.calendar_time {
	margin-bottom: 0;
	white-space: pre-wrap;
	cursor: pointer;
}

.calendar_expand_button {
	background-color: white;
	border: none;
}

div.calendar_event {
	margin: 0.5em;
	border: 1px solid black;
	border-radius: 1em;
	box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
	padding: 5%;
}

.calendar_event_expand {
	display: none;
	text-align: left;
}

.calendar_event_expand.expanded {
	display: block;
}

h2.section-heading {
	margin-top: 20px;
	margin-bottom: 40px;
}

.question_block {
	margin: 0 10vw;
	border-top: 1px solid rgb(202, 202, 202);
}

.faq-btn {
	padding: 0;
	width: 100%;
}

.question_block:hover {
	background-color: rgb(245, 245, 245);
	transition: background-color 0.2s ease-in-out;
}

.question {
	padding: 30px 4%;
	border-radius: 21px;
}

.ques_txt {
	font-weight: 100;
	text-align: left;
}

.question_block .up {
	display: none;
}

.answer {
	width: 100%;
	border-radius: 21px;
	max-height: 0;
	overflow: hidden;
	text-align: left;
	transition: all 0.25s cubic-bezier(0.215, 0.610, 0.355, 1);
}

.answer p {
	text-align: left;
	padding: 3% 4%;
}

.active .answer {
	max-height: 100vh;
	transition: all 0.25s cubic-bezier(0.47, 0, 0.745, 0.715);
}

.expand_box {
	text-align: left;
	margin-left: 6%;
	display: block;
	width: 88%;
	max-height: 0;
	overflow-y: clip;
	transition: max-height 0.25s cubic-bezier(0.215, 0.610, 0.355, 1);
}

.expand_box_core_content p {
	margin-top: 10%;
	text-align: left;
}

.active .expand_box {
	max-height: 100vh;
	transition: max-height 0.25s cubic-bezier(0.47, 0, 0.745, 0.715);
}

button.drop {
	padding-left: 0;
}

.drop {
	background-color: transparent;
	border: none;
	width: 100%;
}
.contributors {
	text-decoration: none;
	border: white;
	border-style: solid;
	padding: 7px;
	font-size: 13px;
	border-radius: 50%;
	width: 30px;
	height: 30px;
	margin: 2px;
	line-height: 42px;
}
/* ... */

